changing joke step name

--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -13,7 +13,7 @@ jobs:
       - name: "hello-action"
         uses: ./.github/actions/hello-world
 
-      - name: ha-ha
+      - name: jokes
         uses: ./.github/actions/joke-action
 
       - name: create-issue
