--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -15,8 +15,9 @@ jobs:
 
       - name: jokes
         uses: ./.github/actions/joke-action
-
+      
       - name: create-issue
         uses: ./.github/actions/issue-maker
         with:
+          repo-token: ${{secrets.GITHUB_TOKEN}}
           joke: ${{steps.jokes.outputs.joke-output}}
