--- a/.github/actions/issue-maker/action.yml
+++ b/.github/actions/issue-maker/action.yml
@@ -7,7 +7,7 @@ inputs:
     description: "This will become the body of the created issue"
   issue-title:
     description: "Every issue needs a title, it's nice to supply one, even though you could do this dynamically within your code"
-    default: "a joke for you"
+    default: "Joke Issue"
     required: true
   repo-token:
     description: "Token with permissions to do repo things"
