--- a/.github/workflows/my-workflow.yml
+++ b/.github/workflows/my-workflow.yml
@@ -14,6 +14,7 @@ jobs:
         uses: ./.github/actions/hello-world
 
       - name: jokes
+        id: jokes
         uses: ./.github/actions/joke-action
       
       - name: create-issue
